tests/rosetta/out/Smalltalk/apply-a-digital-filter-direct-form-ii-transposed-.out
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.st:7: parse error, expected ']'
