tests/rosetta/out/Smalltalk/apply-a-digital-filter-direct-form-ii-transposed-.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| applyFilter out scale i tmp j a b sig res k |
applyFilter := [:input :a :b | out := {}.
scale := (1 / (a at: 0)).
i := 0.
[(i < ((input size)))] whileTrue: [.
tmp := 0.
j := 0.
[(((j <= i)) and: [((j < ((b size))))])] whileTrue: [.
tmp := (tmp + (((b at: j) * (input at: (i - j))))).
j := (j + 1).
].
.
j := 0.
[(((j < i)) and: [((((j + 1)) < ((a size))))])] whileTrue: [.
tmp := (tmp - (((a at: (j + 1)) * (out at: (((i - j)) - 1))))).
j := (j + 1).
].
.
out := out copyWith: (tmp * scale).
i := (i + 1).
].
.
out. ].
a := {1. -2.7756e-16. 0.33333333. -1.85e-17}.
b := {0.16666667. 0.5. 0.5. 0.16666667}.
sig := {-0.917843918645. 0.141984778794. 1.20536903482. 0.190286794412. -0.662370894973. -1.00700480494. -0.404707073677. 0.800482325044. 0.743500089861. 1.01090520172. 0.741527555207. 0.277841675195. 0.400833448236. -0.2085993586. -0.172842103641. -0.134316096293. 0.0259303398477. 0.490105989562. 0.549391221511. 0.9047198589}.
res := applyFilter value: sig value: a value: b.
k := 0.
[(k < ((res size)))] whileTrue: [.
Transcript show: (res at: k) printString; cr.
k := (k + 1).
].
.
